--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "msgr"
-version = "1.1.0"
+version = "1.3.0"
 description = "a simple messaging platform with an API"
 authors = ["gabrielzv1233"]
 
@@ -8,6 +8,7 @@ authors = ["gabrielzv1233"]
 python = ">=3.10.0,<3.11"
 flask = "^2.3.3"
 requests = "^2.31.0"
+geoip2 = "^4.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
