--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = ">=3.10.0,<3.11"
 flask = "^2.3.3"
 requests = "^2.31.0"
 geoip2 = "^4.7.0"
+sentry-sdk = "^1.31.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
