--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ flask = "^2.3.3"
 requests = "^2.31.0"
 geoip2 = "^4.7.0"
 sentry-sdk = "^1.31.0"
+user-agents = "^2.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
